--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Vite + TS</title>
   </head>
   <body>
+    <button id="play">Play</button>
+    <button id="stop">Stop</button>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
